# FutureSignalBot

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  bot.py  coinglass_client.py  config.py  env.example  gemini_analyzer.py  main.py  main_cleaned.py  mexc_client.py  pairs_store.py  pairs_usage_store.py  pyproject.toml  replit.md  requirements.txt  signal_generator.py  signal_generator_v2.py  test_apis.py  utils.py
.github/workflows/: deploy-aca.yml  signalbot-AutoDeployTrigger-c022493c-fa32-433e-9e0a-b7492767933c.yml
bot/: telegram_bot.py
config/: settings.py
data/: micro_metrics.json
infra/: cloud-init-fsbot.yaml
models/: signal_models.py
scripts/: check_env.py  diagnostics.py  quick_signal_test.py  test_scalp_snapshot.py
services/: coinglass_api.py  gemini_analyzer.py  mexc_api.py
systemd/: futuresignalbot.service
tests/: test_volume_profile_toggle.py
tools/: fsbot_manage.sh  redeploy_fsbot.sh
utils/: helpers.py
